# cpp-kde-fscr

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
example_project/: CMakeLists.txt  README.md  pdf.cpp
include/: kde-fscr.hpp  kde-kernels.hpp
tests/: CMakeLists.txt  kde-test.cpp
